--- a/src/pages/Login/index.css
+++ b/src/pages/Login/index.css
@@ -25,6 +25,7 @@
   margin: 100px auto 0px;
   background-color: #fff;
   padding: 20px 40px;
+  position: relative;
 }
 .login .login-content h1 {
   text-align: center;
@@ -34,5 +35,23 @@
 }
 .login .login-content .login-form .login-form-button {
   width: 100%;
+}
+.login .login-content .error-msg {
+  visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  text-align: center;
+  height: 30px;
+  width: 100%;
+  background: #f60c1a;
+  color: #ffffff;
+  font-size: 16px;
+  transform: translateY(-30px);
+  transition: all 0.3s;
+}
+.login .login-content .error-msg.show {
+  visibility: visible;
+  transform: translateY(0);
 }
 /*# sourceMappingURL=./index.css.map */
