--- a/src/pages/Login/index.less
+++ b/src/pages/Login/index.less
@@ -25,6 +25,7 @@
         margin: 100px auto 0px;
         background-color: #fff;
         padding: 20px 40px;
+        position: relative;
         h1{
             text-align: center;
             font-weight: bold;
@@ -37,6 +38,23 @@
             width: 100%;
          }
         }
-
+        .error-msg {
+            visibility: hidden;
+            position: absolute;
+            top: 0;
+            left: 0;
+            text-align: center;
+            height: 30px;
+            width: 100%;
+            background: #f60c1a;
+            color: #ffffff;
+            font-size: 16px;
+            transform: translateY(-30px);
+            transition: all .3s;
+            &.show {
+            visibility: visible;
+            transform: translateY(0);
+            }
+            }
     }
 }
