--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,9 +1,37 @@
 .home {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  padding: 24px;
+  background: #fff;
+  min-height: 850px;
+}
+.home .home-card {
+  float: left;
+}
+.home .home-content {
+  position: absolute;
+  top: 420px;
+  width: 76%;
+  border: 1px solid #e8e8e8;
+}
+.home .home-content .home-menu {
   font-size: 20px;
+}
+.home .home-content .home-menu span {
+  cursor: pointer;
+}
+.home .home-content .home-menu .home-menu-active {
+  border-bottom: 2px solid #1DA57A;
+  color: #1DA57A;
+  padding: 0 0 16px 0;
+}
+.home .home-content .home-menu .home-menu-visited {
+  margin-right: 40px;
+}
+.home .home-content .home-table-left {
+  float: left;
+  width: 60%;
+}
+.home .home-content .home-table-right {
+  float: right;
+  width: 330px;
 }
 /*# sourceMappingURL=./home.css.map */
